--- a/12Chapter/Starbuzz/app/src/main/res/values/strings.xml
+++ b/12Chapter/Starbuzz/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
         <item>Stores</item>
     </string-array>
     <string name="title_activity_drink">DrinkActivity</string>
+    <string name="favorite">Favorite</string>
+    <string name="favorites">Your favorite drinks:</string>
 </resources>
